# unified-llm-client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: smoke.py
src/unified_llm/: __init__.py  client.py  errors.py  types.py
src/unified_llm/providers/: __init__.py  anthropic.py  base.py  openai.py  together.py
tests/: test_sanity.py
