[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "unified-llm"
version = "0.1.0"
description = "Unified async LLM client"
authors = [{name = "Unified LLM"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.24",
  "pydantic>=2.0"
]

[project.urls]
Homepage = "https://example.com"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_llm"]

# Development dependencies
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]


# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

# Ruff (lint + format)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

# Mypy (type checking)
[tool.mypy]
files = ["src/unified_llm"]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

